uploading the project witht the basic Api's

--- a/package.json
+++ b/package.json
@@ -1,28 +1,24 @@
 {
-  "name": "express-prisma-mongo-starter",
-  "version": "0.0.0",
-  "private": true,
-  "license": "MIT",
+  "name": "urban-skillet",
+  "version": "1.0.0",
+  "description": "This is the Urban Skillet Burger Backend",
+  "main": "index.js",
   "scripts": {
-    "dev": "prisma db push && nodemon ./src/index",
-    "start": "prisma db push && node ./src/index",
-    "mongo-start": "docker run -d -p 27017-27019:27017-27019 --name mongo-dev adaptable/mongo-replica-set",
-    "mongo-stop": "docker rm -f mongo-dev"
+    "test": "dev",
+    "dev": "index.js",
+    "start": "nodemon index.js"
   },
+  "author": "Muhammad Osama",
+  "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^3.14.0",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "dotenv": "^16.0.1",
-    "express": "~4.16.1",
-    "morgan": "~1.9.1",
-    "prisma": "^3.14.0",
-    "sanitize-html": "^2.7.0"
+    "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "square": "^32.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
-  },
-  "nodemonConfig": {
-    "ext": "js,mjs,json,css,html"
+    "nodemon": "^3.0.1"
   }
 }
